--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Miracle 2.0 EARN</title>
+    <title>MUSIC ON THE BLOCK</title>
   </head>
   <body>
-    <noscript>Miracle 2.0 EARN</noscript>
+    <noscript>MUSIC ON THE BLOCK</noscript>
     <div id="root"></div>
 
   </body>
