--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="./static/oz/favicon.ico" />
+    <meta
+      name="viewport"
+      content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Create Pop songs with AI, customize vocals, evaluate music, and secure your copyright on the blockchain with Music on the Block."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="MUSIC ON THE BLOCK" />
+    <meta property="og:title" content="MUSIC ON THE BLOCK" />
+    <meta
+      property="og:description"
+      content="Create Pop songs with AI, customize vocals, evaluate music, and secure your copyright on the blockchain with Music on the Block."
+    />
+    <meta property="og:image" content="/static/oz/music_on_the_block.png" />
+    <meta property="og:url" content="https://musicontheblock.com/" />
     <title>MUSIC ON THE BLOCK</title>
   </head>
   <body>
-    <noscript>MUSIC ON THE BLOCK</noscript>
     <div id="root"></div>
-
   </body>
 </html>
