--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,17 @@
     <meta property="og:url" content="https://musicontheblock.com/" />
     <title>MUSIC ON THE BLOCK</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SN58TTV0Q5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SN58TTV0Q5');
+  </script>
   <body>
     <div id="root"></div>
   </body>
